fix(): use flex to align title correctly (#426)

--- a/src/components/EnsonoStacksImage/EnsonoStacksImage.module.css
+++ b/src/components/EnsonoStacksImage/EnsonoStacksImage.module.css
@@ -1,9 +1,12 @@
 .ensonoStacksImageContainer {
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     min-height: 20rem;
 }
 
-.ensonoStacksImageContainer h2, 
+.ensonoStacksImageContainer h2,
 .ensonoStacksImageContainer p {
  color: #fff;
 }
@@ -36,13 +39,12 @@
     align-items: center;
 }
 
-.ensonoStacksImageContainer .stacksLogo img { 
+.ensonoStacksImageContainer .stacksLogo img {
    width: 8rem;
    height: 4rem;
 }
 
 .ensonoStacksImageContainer .wrapper {
-    position: absolute;
     left: 2rem;
     bottom: 2rem;
     display: flex;
@@ -52,18 +54,20 @@
 
 @media only screen and (min-width: 768px) {
     .ensonoStacksImageContainer {
+        justify-content: flex-start;
+        padding-left: 4rem;
         min-height: 24rem;
     }
 
     .ensonoStacksImageContainer h2 {
         font-size: var(--ifm-h2-font-size);
     }
-    
+
     .ensonoStacksImageContainer .stacksLogo img {
         width: auto;
         height: auto;
      }
-    
+
     .ensonoStacksImageContainer p {
         width: 17rem;
     }
@@ -71,10 +75,6 @@
     .ensonoStacksImageContainer .wrapper {
         left: 4rem;
         bottom: auto;
-        align-items: center;
-        top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
     }
-    
+
 }
